PBC-related changes.
git-svn-id: http://qmcpack.googlecode.com/svn@654 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(WFSRCS
   ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp
   ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp
   ../QMCWaveFunctions/NumericalOrbitalSetBuilder.cpp
+  ../QMCWaveFunctions/ElectronGasOrbitalBuilder.cpp
   ../QMCHamiltonians/LocalPPotential.cpp
   ../QMCHamiltonians/NonLocalPPotential.cpp
   ../QMCHamiltonians/LocalCorePolPotential.cpp
