Fix restart mode.
git-svn-id: http://qmcpack.googlecode.com/svn@715 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -41,6 +41,7 @@ SET(QMCDRIVERS
   ../QMCDrivers/VMCMultiple.cpp
   ../QMCDrivers/VMCPbyPMultiple.cpp
   ../QMCDrivers/RQMCMultiple.cpp
+  ../QMCDrivers/MultiChain.cpp
   ../Estimators/MultipleEnergyEstimator.cpp
   ../QMCDrivers/DMCParticleByParticle.cpp
 )
