Add szlib search for hdf5 compiled with szlib (e.g. cu.ncsa).
git-svn-id: http://qmcpack.googlecode.com/svn@755 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -66,7 +66,6 @@ IF(NOT FOUND_BOOST)
   INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
   INCLUDE(${PROJECT_CMAKE}/FindSprng.cmake)
 ENDIF(NOT FOUND_BOOST)
-
  
 IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
@@ -87,10 +86,16 @@ IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
   INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
   LINK_LIBRARIES(${HDF5_LIBRARY})
+  #zlib
   INCLUDE(${CMAKE_ROOT}/Modules/FindZLIB.cmake)
   IF(ZLIB_FOUND)
     LINK_LIBRARIES(${ZLIB_LIBRARY})
   ENDIF(ZLIB_FOUND)
+  #szlib
+  INCLUDE(${PROJECT_CMAKE}/FindSZLIB.cmake)
+  IF(SZLIB_FOUND)
+    LINK_LIBRARIES(${SZLIB_LIBRARY})
+  ENDIF(SZLIB_FOUND)
 ENDIF(FOUND_HDF5)
 
 IF(FOUND_GSL)
