Implements get function to write stuff.
git-svn-id: http://qmcpack.googlecode.com/svn@765 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(UTILITIES
   Utilities/SimpleParser.cpp 
   Utilities/OhmmsInform.cpp 
   Utilities/OhmmsInfo.cpp 
+  OhmmsData/Libxml2Doc.cpp
   OhmmsApp/ProjectData.cpp
   OhmmsApp/RandomNumberControl.cpp
   Numerics/OhmmsBlas.cpp
