Add hdf5-related classes.
git-svn-id: http://qmcpack.googlecode.com/svn@788 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -24,7 +24,10 @@ SET(PARTICLE
   Particle/ParticleSet.BC.cpp 
   Particle/MCWalkerConfiguration.cpp 
   Particle/DistanceTable.cpp
-  Particle/HDFWalkerIO.cpp
+  Particle/HDFWalkerOutput.cpp
+  Particle/HDFWalkerInput0.cpp
+  Particle/HDFWalkerInputCollect.cpp
+  Particle/HDFWalkerInputManager.cpp
   LongRange/KContainer.cpp
   LongRange/StructFact.cpp
 )
