--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -45,3 +45,5 @@ TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase)
 #TARGET_LINK_LIBRARIES(spline3d_io qmc qmcbase)
 #ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
 #TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
+ADD_EXECUTABLE(h5merge HDFWalkerMerger h5merge.cpp)
+TARGET_LINK_LIBRARIES(h5merge qmc qmcbase)
